mobile overflow fix

--- a/index.css
+++ b/index.css
@@ -247,7 +247,6 @@ textarea:focus {
     margin-bottom: 30px;
     color: white;
     margin-top: 20px;
-    min-width: 290px;
     width: calc(100% - 40px);
     font-family: "Montserrat Alternates", serif;
 }
@@ -266,10 +265,17 @@ textarea:focus {
 /*Footer*/
 .footer {
     display: inline-block;
-    background-image: url("assets/footer/foot14.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background: linear-gradient(#18e9dc 0%, #0db3c7 100%);
+}
+@media only screen and (min-width: 350px)  {
+    .footer {
+        background: transparent;
+        display: inline-block;
+        background-image: url("assets/footer/foot14.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
 }
 .social-links {
     margin: 90px 0px;
